--- a/index.html
+++ b/index.html
@@ -33,11 +33,12 @@
       ga: 'UA-145106145-1',
 
       search: {
-      maxAge: 86400000, // Expiration time, the default one day
-      paths: 'auto', // or 'auto'
-      placeholder: 'Type to search',
-      hideOtherSidebarContent: true,
-      depth: 6},
+        maxAge: 86400000, // Expiration time, the default one day
+        paths: 'auto', // or 'auto'
+        placeholder: 'Type to search',
+        hideOtherSidebarContent: true,
+        depth: 6
+      },
 
       plugins: [EditOnGithubPlugin.create('https://github.com/ngawangtrinley/katen/blob/main/')],
     }
@@ -47,16 +48,40 @@
         var markdownSection = document.querySelector('.markdown-section');
         var popup = null;
 
+        // Plugin to display images in the page content when clicking on the link
+        markdownSection.addEventListener('click', function(e) {
+          var target = e.target;
+          if (target.tagName === 'A') {
+            var href = target.getAttribute('href');
+
+            if (href.startsWith('http') && (href.endsWith('.png') || href.endsWith('.jpg') || href.endsWith('.jpeg') || href.endsWith('.gif'))) {
+              e.preventDefault();
+
+              // Check if image div already exists
+              var nextSibling = target.nextSibling;
+              if (nextSibling && nextSibling.classList && nextSibling.classList.contains('injected-img')) {
+                // If the image div already exists, remove it (toggle behavior)
+                nextSibling.remove();
+              } else {
+                // Otherwise, create the image div and insert it after the link
+                var div = document.createElement('div');
+                div.classList.add('injected-img');
+                div.style.margin = '10px 0';
+                div.innerHTML = '<img src="' + href + '" style="max-width: 100%;">';
+                target.parentNode.insertBefore(div, target.nextSibling);
+              }
+            }
+          }
+        });
+
+        // Plugin to display footnotes in popup on hover
         markdownSection.addEventListener('mouseover', function(e) {
           var target = e.target;
-          if (target.tagName === 'A' && target.hash.startsWith('#fn:')) {
-            // Get footnote content
-            var footnoteId = target.hash.substring(1);
+          if (target.tagName === 'SUP' && target.firstChild.tagName === 'A' && target.firstChild.hash.startsWith('#fn:')) {
+            var footnoteId = target.firstChild.hash.substring(1);
             var footnoteContentElement = document.getElementById(footnoteId);
-            if(footnoteContentElement) {
+            if (footnoteContentElement) {
               var footnoteContent = footnoteContentElement.innerHTML;
-
-              // Create popup
               popup = document.createElement('div');
               popup.style.position = 'fixed';
               popup.style.left = e.clientX + 'px';
@@ -67,8 +92,6 @@
               popup.style.border = '1px solid #000';
               popup.style.zIndex = '1000';
               popup.innerHTML = footnoteContent;
-
-              // Add popup to body
               document.body.appendChild(popup);
             }
           }
@@ -76,8 +99,7 @@
 
         markdownSection.addEventListener('mouseout', function(e) {
           var target = e.target;
-          if (target.tagName === 'A' && target.hash.startsWith('#fn:') && popup) {
-            // Remove popup from body
+          if (target.tagName === 'SUP' && target.firstChild.tagName === 'A' && target.firstChild.hash.startsWith('#fn:') && popup) {
             document.body.removeChild(popup);
             popup = null;
           }
@@ -94,6 +116,5 @@
   <script src="https://cdn.jsdelivr.net/npm/docsify-tabs@1"></script>
   <!-- plugins -->
   <script src="//cdn.jsdelivr.net/npm/docsify-sidebar-collapse/dist/docsify-sidebar-collapse.min.js"></script>
-
 </body>
 </html>
