--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>OpenPecha development guidelines</title>
+  <!-- <link rel="icon" href="_assets/favicon.ico"> -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="description" content="Description">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
@@ -29,6 +30,7 @@
       },
       subMaxLevel: 3,
       auto2top: true,
+      // logo: '/_assets/logo.png',
       themeColor: '#8e57f1',
       ga: 'UA-145106145-1',
 
@@ -47,36 +49,61 @@
         var markdownSection = document.querySelector('.markdown-section');
         var popup = null;
 
-        markdownSection.addEventListener('mouseover', function(e) {
+        // Existing Plugin
+        markdownSection.addEventListener('click', function(e) {
           var target = e.target;
-          if (target.tagName === 'A' && target.hash.startsWith('#fn:')) {
-            // Get footnote content
-            var footnoteId = target.hash.substring(1);
-            var footnoteContentElement = document.getElementById(footnoteId);
-            if(footnoteContentElement) {
-              var footnoteContent = footnoteContentElement.innerHTML;
+          if (target.tagName === 'A') {
+            var href = target.getAttribute('href');
 
-              // Create popup
-              popup = document.createElement('div');
-              popup.style.position = 'fixed';
-              popup.style.left = e.clientX + 'px';
-              popup.style.top = (e.clientY + 10) + 'px';
-              popup.style.background = '#fff';
-              popup.style.padding = '10px';
-              popup.style.maxWidth = '300px';
-              popup.style.border = '1px solid #000';
-              popup.style.zIndex = '1000';
-              popup.innerHTML = footnoteContent;
+            if (href.startsWith('http') && (href.endsWith('.png') || href.endsWith('.jpg') || href.endsWith('.jpeg') || href.endsWith('.gif'))) {
+              e.preventDefault();
 
-              // Add popup to body
-              document.body.appendChild(popup);
+              // Check if image div already exists
+              var nextSibling = target.nextSibling;
+              if (nextSibling && nextSibling.classList && nextSibling.classList.contains('injected-img')) {
+                // If the image div already exists, remove it (toggle behavior)
+                nextSibling.remove();
+              } else {
+                // Otherwise, create the image div and insert it after the link
+                var div = document.createElement('div');
+                div.classList.add('injected-img');
+                div.style.margin = '10px 0';
+                div.innerHTML = '<img src="' + href + '" style="max-width: 100%;">';
+                target.parentNode.insertBefore(div, target.nextSibling);
+              }
             }
           }
         });
 
-        markdownSection.addEventListener('mouseout', function(e) {
+        // Footnote Tooltip Plugin
+        markdownSection.addEventListener('mouseenter', function(e) {
           var target = e.target;
-          if (target.tagName === 'A' && target.hash.startsWith('#fn:') && popup) {
+          if (target.tagName === 'SUP' && target.firstChild.tagName === 'A' && target.firstChild.hash.startsWith('#fn:')) {
+            // Get footnote content
+            var footnoteId = target.firstChild.hash.substring(1);
+            var footnoteElement = document.getElementById(footnoteId);
+            var footnoteContent = footnoteElement.innerHTML;
+
+            // Create popup
+            popup = document.createElement('div');
+            popup.style.position = 'fixed';
+            popup.style.left = e.clientX + 'px';
+            popup.style.top = (e.clientY + 10) + 'px';
+            popup.style.background = '#fff';
+            popup.style.padding = '10px';
+            popup.style.maxWidth = '300px';
+            popup.style.border = '1px solid #000';
+            popup.style.zIndex = '1000';
+            popup.innerHTML = footnoteContent;
+
+            // Add popup to body
+            document.body.appendChild(popup);
+          }
+        });
+
+        markdownSection.addEventListener('mouseleave', function(e) {
+          var target = e.target;
+          if (target.tagName === 'SUP' && target.firstChild.tagName === 'A' && target.firstChild.hash.startsWith('#fn:') && popup) {
             // Remove popup from body
             document.body.removeChild(popup);
             popup = null;
