--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <title>OpenPecha development guidelines</title>
-  <!-- <link rel="icon" href="_assets/favicon.ico"> -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="description" content="Description">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
@@ -30,16 +29,16 @@
       },
       subMaxLevel: 3,
       auto2top: true,
-      // logo: '/_assets/logo.png',
       themeColor: '#8e57f1',
       ga: 'UA-145106145-1',
 
       search: {
-      maxAge: 86400000, // Expiration time, the default one day
-      paths: 'auto', // or 'auto'
-      placeholder: 'Type to search',
-      hideOtherSidebarContent: true,
-      depth: 6},
+        maxAge: 86400000, // Expiration time, the default one day
+        paths: 'auto', // or 'auto'
+        placeholder: 'Type to search',
+        hideOtherSidebarContent: true,
+        depth: 6
+      },
 
       plugins: [EditOnGithubPlugin.create('https://github.com/ngawangtrinley/katen/blob/main/')],
     }
@@ -49,7 +48,7 @@
         var markdownSection = document.querySelector('.markdown-section');
         var popup = null;
 
-        // Existing Plugin
+        // Plugin to display images in the page content when clicking on the link
         markdownSection.addEventListener('click', function(e) {
           var target = e.target;
           if (target.tagName === 'A') {
@@ -75,36 +74,32 @@
           }
         });
 
-        // Footnote Tooltip Plugin
-        markdownSection.addEventListener('mouseenter', function(e) {
+        // Plugin to display footnotes in popup on hover
+        markdownSection.addEventListener('mouseover', function(e) {
           var target = e.target;
           if (target.tagName === 'SUP' && target.firstChild.tagName === 'A' && target.firstChild.hash.startsWith('#fn:')) {
-            // Get footnote content
             var footnoteId = target.firstChild.hash.substring(1);
-            var footnoteElement = document.getElementById(footnoteId);
-            var footnoteContent = footnoteElement.innerHTML;
-
-            // Create popup
-            popup = document.createElement('div');
-            popup.style.position = 'fixed';
-            popup.style.left = e.clientX + 'px';
-            popup.style.top = (e.clientY + 10) + 'px';
-            popup.style.background = '#fff';
-            popup.style.padding = '10px';
-            popup.style.maxWidth = '300px';
-            popup.style.border = '1px solid #000';
-            popup.style.zIndex = '1000';
-            popup.innerHTML = footnoteContent;
-
-            // Add popup to body
-            document.body.appendChild(popup);
+            var footnoteContentElement = document.getElementById(footnoteId);
+            if (footnoteContentElement) {
+              var footnoteContent = footnoteContentElement.innerHTML;
+              popup = document.createElement('div');
+              popup.style.position = 'fixed';
+              popup.style.left = e.clientX + 'px';
+              popup.style.top = (e.clientY + 10) + 'px';
+              popup.style.background = '#fff';
+              popup.style.padding = '10px';
+              popup.style.maxWidth = '300px';
+              popup.style.border = '1px solid #000';
+              popup.style.zIndex = '1000';
+              popup.innerHTML = footnoteContent;
+              document.body.appendChild(popup);
+            }
           }
         });
 
-        markdownSection.addEventListener('mouseleave', function(e) {
+        markdownSection.addEventListener('mouseout', function(e) {
           var target = e.target;
           if (target.tagName === 'SUP' && target.firstChild.tagName === 'A' && target.firstChild.hash.startsWith('#fn:') && popup) {
-            // Remove popup from body
             document.body.removeChild(popup);
             popup = null;
           }
@@ -121,6 +116,5 @@
   <script src="https://cdn.jsdelivr.net/npm/docsify-tabs@1"></script>
   <!-- plugins -->
   <script src="//cdn.jsdelivr.net/npm/docsify-sidebar-collapse/dist/docsify-sidebar-collapse.min.js"></script>
-
 </body>
 </html>
